--- a/Day 2/index.html
+++ b/Day 2/index.html
@@ -6,16 +6,48 @@
     <title>Day 2 - Sigma Web Developer with codewithharry</title>
   </head>
   <body>
-
     <!-- heading tags in html  -->
     <h1>This is heading first</h1>
     <h2>This is heading second</h2>
     <h3>This is heading third</h3>
     <h4>This is heading four</h4>
-    <h5>This is heading five </h5>
-    <h6>This is heading six</h6>  
-    
-    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Incidunt, dolorum voluptate ea voluptas alias dicta consectetur sint nobis, molestiae deleniti dolores id officia temporibus excepturi unde optio tempore ab quis? Lorem, ipsum dolor sit amet consectetur adipisicing elit. Velit est hic numquam optio cumque esse doloribus? Commodi adipisci tempore expedita quidem, ad sed unde dignissimos eius, esse maiores, repellat ullam? Lorem, ipsum dolor sit amet consectetur adipisicing elit. Perferendis recusandae, iste alias natus veniam ullam laboriosam culpa qui quisquam maxime esse unde soluta cumque totam, optio molestiae earum? Inventore, laborum!</p>
+    <h5>This is heading five</h5>
+    <h6>This is heading six</h6>
+
+    <p>
+      Lorem ipsum dolor sit amet consectetur adipisicing elit. Incidunt, dolorum
+      voluptate ea voluptas alias dicta consectetur sint nobis, molestiae
+      deleniti dolores id officia temporibus excepturi unde optio tempore ab
+      quis? Lorem, ipsum dolor sit amet consectetur adipisicing elit. Velit est
+      hic numquam optio cumque esse doloribus? Commodi adipisci tempore expedita
+      quidem, ad sed unde dignissimos eius, esse maiores, repellat ullam? Lorem,
+      ipsum dolor sit amet consectetur adipisicing elit. Perferendis recusandae,
+      iste alias natus veniam ullam laboriosam culpa qui quisquam maxime esse
+      unde soluta cumque totam, optio molestiae earum? Inventore, laborum!
+    </p>
+
+    <!-- image in html  -->
+    <img src="image.png" height="200px" width="200px" alt="" />
+
+    <!-- List in html  -->
+
+    <!-- Unorder list  -->
+    <h2>Unorder list in html</h2>
+    <ul type="circle	">
+      <li>Apple</li>
+      <li>Banana</li>
+      <li>Orange</li>
+      <li>Mango</li>
+    </ul>
+
+    <h2>Order list in html</h2>
+    <ol type="A">
+      <li>Apple</li>
+      <li>Banana</li>
+      <li>Orange</li>
+      <li>Mango</li>
+    </ol>
+
     
   </body>
 </html>
