--- a/Day 3/vdo_aud_media.html
+++ b/Day 3/vdo_aud_media.html
@@ -8,10 +8,10 @@
   <body>
     <!-- video tag      -->
 
-    <video src="vdo.mp4" height="500px" controls poster="image.png"></video>
+    <video src="/vdo/vdo.mp4" height="500px" controls poster="image.png"></video>
 
     <!-- audio tag  -->
-    <audio src="ad.mp3" controls></audio>
+    <audio src="/aud/ad.mp3" controls></audio>
 
     <!-- ifarame in html  -->
 
