--- a/Day 3/exercise_1.html
+++ b/Day 3/exercise_1.html
@@ -3,9 +3,25 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Exercise one || Sigma Web Development</title>
+    <title>Exercise 1 || Sigma Web Development</title>
 </head>
 <body>
+    <div class="vdo-container">
+        <video height="400px" controls src="/vdo/vdo.mp4"></video>
+        <video height="400px" controls src="/vdo/vdo1.mp4"></video>
+        <video height="400px" controls src="/vdo/vdo2.mp4"></video>
+        <video height="400px" controls src="/vdo/vdo3.mp4"></video>
+        <video height="400px" controls src="/vdo/vdo4.mp4"></video>
+        <video height="400px" controls src="/vdo/vdo5.mp4"></video>
+    </div>
+    <div class="aud-container">
+        <audio controls  src="aud/aud.mp3"></audio>
+        <audio controls  src="aud/aud1.mp3"></audio>
+        <audio controls  src="aud/aud2.mp3"></audio>
+        <audio  controls src="aud/aud3.mp3"></audio>
+        <audio controls  src="aud/aud4.m4a"></audio>
+        <audio  controls src="aud/aud5.mp3"></audio>
+    </div>
     
 </body>
 </html>
