--- a/Day 4/index.html
+++ b/Day 4/index.html
@@ -20,7 +20,7 @@
   </style> -->
 
   <!-- And last one External CSS -->
-   <link rel="stylesheet" href="style.css">
+   <link rel="stylesheet" href="index.css">
   <body>
     <div>
       <!-- this is inline css  -->
