--- a/Day 4/exercies2.html
+++ b/Day 4/exercies2.html
@@ -36,6 +36,7 @@
         ab maxime suscipit quidem repellat at laboriosam! Eum, aliquid ipsa
         numquam cumque optio quis quaerat beatae libero, possimus quibusdam
         natus.
+        Lorem ipsum dolor sit amet consectetur, adipisicing elit. In, atque doloremque illo illum impedit, accusamus nulla autem quidem quae beatae quos quasi blanditiis sunt sed exercitationem, optio saepe alias nisi.
       </p>
       <p>i am paragraph one</p>
       <p>i am paragraph two</p>
