--- a/Day 4/index.html
+++ b/Day 4/index.html
@@ -42,6 +42,7 @@
         page, while CSS adds styling to that structure. This tutorial assumes
         that you have prior knowledge of HTML. If that's not the case, you can
         follow the HTML tutorial first.
+        Lorem ipsum dolor sit amet consectetur adipisicing elit. Ea consequatur quis voluptatibus vero, nulla nesciunt inventore ratione! Soluta, reiciendis itaque temporibus vitae recusandae a earum nam minus assumenda, vero autem.
       </p>
     </div>
   </body>
