--- a/Day 4/selectors.html
+++ b/Day 4/selectors.html
@@ -79,6 +79,7 @@
           consectetur quam minus natus magni, itaque rerum! Minima eius totam
           eligendi vero, commodi dicta voluptate labore laboriosam perspiciatis
           expedita deleniti dolores ad, atque voluptatum impedit, beatae facere!
+          Lorem, ipsum dolor sit amet consectetur adipisicing elit. Excepturi aliquam temporibus dolore libero aut incidunt nobis iure, odio, commodi earum deserunt dolorem quidem labore quas quo in quos molestias vel.
         </p>
       </div>
     </div>
