--- a/Day 4/boxModel.html
+++ b/Day 4/boxModel.html
@@ -36,12 +36,19 @@
         padding: 25px;
         border: 2px solid black;
       }
+       .box4{
+        background-color: rgb(135, 235, 233);
+        margin: 25px;
+        padding: 25px;
+        border: 2px solid black;
+      }
     </style>
   </head>
   <body>
     <div>
       <div class="box box1">This is box one</div>
       <div class="box box2">This is box two</div>
+      <div class="box box3">This is box third</div>
       <div class="box box3">This is box third</div>
     </div>
   </body>
