--- a/Day 4/color.html
+++ b/Day 4/color.html
@@ -9,9 +9,9 @@
         /* https://codepen.io/web-dot-dev/pen/ZELGraM */
         h1 {
             /* color:darkred; */
-            /* color: #0BEE0B; */
+            color: #0BEE0B;
             /* color: rgb(76, 125, 59); */
-            color: rgba(255, 22, 5, 0.175);
+            /* color: rgba(255, 22, 5, 0.175); */
             /* color: hsl(130, 61%, 44%); */
             background-color: rgb(76, 125, 59);
         }
