--- a/Day 8/grid2.html
+++ b/Day 8/grid2.html
@@ -1,42 +1,57 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>CSS Grid | Sigma Web Development</title>
-  </head>
-  <style>
-    * {
-      margin: 0;
-      padding: 0;
-    }
-    .container {
-      border: 2px solid green;
-      display: grid;
-      grid-template-areas: 'nav nav nav ';
-    }
-    .item {
-      height: 55px;
-      width: 55px;
-      border: 2px solid red;
-    }
-    .item4 {
-      grid-row: 1/2;
-      grid-column: 1/2;
-    }
-     .item1 {
-      grid-row: 1/2;
-      grid-column: 1/2;
-    }
-  </style>
-  <body>
+
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>CSS Grid</title>
+    <style>
+        .container {
+            border: 2px solid black;
+            display: grid;
+            grid-template-areas: "nav nav nav"
+                "side article article"
+                "footer footer footer";
+        }
+
+        .item {
+            border: 2px solid red;
+            height: 55px;
+        }
+
+        .item-1 {
+            grid-area: nav;
+            background-color: aqua;
+        }
+
+        .item-2 {
+            grid-area: side;
+            background-color: beige;
+        }
+
+        .item-3 {
+            grid-area: article;
+            background-color: azure;
+        }
+
+        .item-4 {
+            grid-area: footer;
+        }
+
+        .item-5 {
+            grid-area: nav;
+        }
+    </style>
+</head>
+
+<body>
     <div class="container">
-      <div class="item item1">1</div>
-      <div class="item">2</div>
-      <div class="item">3</div>
-      <div class="item item4">4</div>
-      <div class="item">5</div>
-      <div class="item">6</div>
+        <div class="item item-1">1</div>
+        <div class="item item-2">2</div>
+        <div class="item item-3">3</div>
+        <div class="item item-4">4</div>
+        <div class="item item-5">5</div>
     </div>
-  </body>
+</body>
+
 </html>
