--- a/Day 9/exercise7.html
+++ b/Day 9/exercise7.html
@@ -43,8 +43,10 @@
     </header>
     <div class="container">
         <div class="box-container">
-            <h1>Englis</h1>
-            <p>Include all langauges.</p>
+            <div class="top">                
+                <h1>Englis</h1>
+                <p>Include all langauges.</p>
+            </div>
             <div class="btn">
                 <button><a href="">Download</a></button>
                 <button><a href="">Download</a></button>
