--- a/Day 9/exercise7.html
+++ b/Day 9/exercise7.html
@@ -45,7 +45,7 @@
         <div class="box-container">
             <div class="top">                
                 <h1>Englis</h1>
-                <p>Include all langauges.</p>
+                <p>Include all langauges</p>
             </div>
             <div class="btn">
                 <button><a href="">Download</a></button>
