--- a/Day 10/index.html
+++ b/Day 10/index.html
@@ -5,16 +5,16 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>AutoHub / Car & Auto Parts</title>
-  <!-- <link rel="stylesheet" href="css/navstyle.css">
+  <link rel="stylesheet" href="css/navstyle.css">
   <link rel="stylesheet" href="css/home-section.css">
   <link rel="stylesheet" href="css/s2card.css">
   <link rel="stylesheet" href="css/brandlogo.css">
   <link rel="stylesheet" href="css/blogs.css">
-  <link rel="stylesheet" href="css/footer.css"> -->
+  <link rel="stylesheet" href="css/footer.css"> 
   <link rel="shortcut icon" href="img/favicon.png" type="image/x-icon">
 </head>
 
-<body>
+<body>    
   <nav>
     <!-- Logo -->
     <div class="logo">
