--- a/Day_13/index.html
+++ b/Day_13/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>JavaScript </title>
+    <title>JavaScript Introduction || Sigma Web Development </title>
 </head>
 <body>
     <div class="box">
