--- a/Day_11/index.html
+++ b/Day_11/index.html
@@ -13,13 +13,13 @@
 
             <div class="input-box">
                 <span class="icon">👤</span>
-                <input type="text" required />
+                <input type="text" required  placeholder="Enter your username"/>
                 <label>Username</label>
             </div>
 
             <div class="input-box">
                 <span class="icon">🔒</span>
-                <input type="password" required />
+                <input type="password" required placeholder="Enter password" />
                 <label>Password</label>
             </div>
 
