--- a/Day_12/index.html
+++ b/Day_12/index.html
@@ -53,11 +53,11 @@
       </div>
     </div>
 
+    <h2 class="feature-head">More Reasons to Join</h2>
     <section class="features-section">
       <!-- Card 1 -->
       <div class="feature-card">
-        <div class="icon">
-        <svg version="1.1" id="Layer_1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" viewBox="0 0 356.7 356.7" xml:space="preserve" width="129px" height="129px" fill="#cd1dbf" stroke="#cd1dbf"><g id="SVGRepo_bgCarrier" stroke-width="0"></g><g id="SVGRepo_tracerCarrier" stroke-linecap="round" stroke-linejoin="round"></g><g id="SVGRepo_iconCarrier"> <g> <g> <rect x="129.091" y="306.204" style="fill:#cd42ba;" width="98.516" height="18.71"></rect> <polygon style="fill:#ae3bce;" points="205.78,264.537 150.917,264.537 143.706,306.204 212.992,306.204 "></polygon> <path style="fill:#d12eb3;" d="M7.5,247.293V51.787c0-11,9-20,20-20h301.699c11,0,20,9,20,20v195.506L7.5,247.293L7.5,247.293z"></path> <rect x="27.5" y="51.787" style="fill:#d61fa5;" width="301.699" height="186.5"></rect> <polygon style="opacity:0.05;fill:#cb0bb2;enable-background:new ;" points="199.871,51.787 27.5,224.158 27.5,238.286 200.246,238.286 329.199,109.334 329.199,51.787 "></polygon> <path style="fill:#cd42ba;" d="M7.5,234.286v13.006c0,11,9,20,20,20h301.699c11,0,20-9,20-20v-13.006H7.5z"></path> </g> <path style="fill:#c322a0;" d="M178.35,258.626c4.328,0,7.836-3.508,7.836-7.836s-3.508-7.836-7.836-7.836 s-7.836,3.508-7.836,7.836S174.022,258.626,178.35,258.626z M329.199,24.287H27.5c-15.164,0-27.5,12.336-27.5,27.5v195.506 c0,15.164,12.336,27.5,27.5,27.5h114.03l-4.138,23.911h-8.301c-4.142,0-7.5,3.358-7.5,7.5v18.71c0,4.142,3.358,7.5,7.5,7.5h98.516 c4.142,0,7.5-3.358,7.5-7.5v-18.71c0-4.142-3.358-7.5-7.5-7.5h-8.301l-4.138-23.911H329.2c15.164,0,27.5-12.336,27.5-27.5V51.787 C356.699,36.624,344.363,24.287,329.199,24.287z M220.107,313.704v3.71h-83.516v-3.71H220.107z M152.615,298.704l4.139-23.911 h43.191l4.139,23.911H152.615z M341.699,247.293c0,6.893-5.607,12.5-12.5,12.5H27.5c-6.893,0-12.5-5.607-12.5-12.5v-5.506h326.699 V247.293z M35,226.786v-167.5h286.699v167.5H35z M341.699,226.786h-5v-175c0-4.142-3.358-7.5-7.5-7.5H27.5 c-4.142,0-7.5,3.358-7.5,7.5v175h-5v-175c0-6.893,5.607-12.5,12.5-12.5h301.699c6.893,0,12.5,5.607,12.5,12.5V226.786z"></path> </g> </g></svg>
+        <div class="icon">          
         </div>
         <h2>Enjoy on your TV</h2>
         <p>Watch on smart TVs, PlayStation, Xbox, Chromecast, and more.</p>
@@ -65,17 +65,14 @@
 
       <!-- Card 2 -->
       <div class="feature-card">
-        <div class="icon">
-        </div>
+        <div class="icon"></div>
         <h2>Download to watch offline</h2>
         <p>Save your favorites easily and always have something to watch.</p>
       </div>
 
       <!-- Card 3 -->
       <div class="feature-card">
-        <div class="icon">
-          
-        </div>
+        <div class="icon"></div>
         <h2>Watch everywhere</h2>
         <p>
           Stream unlimited movies and TV shows on your phone, tablet, laptop,
@@ -84,8 +81,7 @@
       </div>
       <!-- Card 3 -->
       <div class="feature-card">
-        <div class="icon">
-        </div>
+        <div class="icon"></div>
         <h2>Watch everywhere</h2>
         <p>
           Stream unlimited movies and TV shows on your phone, tablet, laptop,
@@ -93,5 +89,34 @@
         </p>
       </div>
     </section>
+
+    <div class="favqes-container">
+      <h2>Frequently Asked Questions</h2>
+      <div class="ques-container">
+        <p>What is Netflix?</p>
+        <svg hegiht="28px" width="28px" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg"><g id="SVGRepo_bgCarrier" stroke-width="0"></g><g id="SVGRepo_tracerCarrier" stroke-linecap="round" stroke-linejoin="round"></g><g id="SVGRepo_iconCarrier"> <path d="M4 12H20M12 4V20" stroke="#ffffff" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"></path> </g></svg>
+      </div>
+      <div class="ques-container">
+        <p>How much does Netflix cost?</p>
+        <svg hegiht="28px" width="28px" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg"><g id="SVGRepo_bgCarrier" stroke-width="0"></g><g id="SVGRepo_tracerCarrier" stroke-linecap="round" stroke-linejoin="round"></g><g id="SVGRepo_iconCarrier"> <path d="M4 12H20M12 4V20" stroke="#ffffff" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"></path> </g></svg>
+      </div>
+      <div class="ques-container">
+        <p>Where can I watch?</p>
+        <svg hegiht="28px" width="28px" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg"><g id="SVGRepo_bgCarrier" stroke-width="0"></g><g id="SVGRepo_tracerCarrier" stroke-linecap="round" stroke-linejoin="round"></g><g id="SVGRepo_iconCarrier"> <path d="M4 12H20M12 4V20" stroke="#ffffff" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"></path> </g></svg>
+      </div>
+      <div class="ques-container">
+        <p>How do I cancel?</p>
+        <svg hegiht="28px" width="28px" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg"><g id="SVGRepo_bgCarrier" stroke-width="0"></g><g id="SVGRepo_tracerCarrier" stroke-linecap="round" stroke-linejoin="round"></g><g id="SVGRepo_iconCarrier"> <path d="M4 12H20M12 4V20" stroke="#ffffff" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"></path> </g></svg>
+      </div>
+      <div class="ques-container">
+        <p>What can I watch on Netflix?</p>
+        <svg hegiht="28px" width="28px" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg"><g id="SVGRepo_bgCarrier" stroke-width="0"></g><g id="SVGRepo_tracerCarrier" stroke-linecap="round" stroke-linejoin="round"></g><g id="SVGRepo_iconCarrier"> <path d="M4 12H20M12 4V20" stroke="#ffffff" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"></path> </g></svg>
+      </div>
+      <div class="ques-container"> 
+        <p>Is Netflix good for kids?</p>
+        <svg hegiht="28px" width="28px" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg"><g id="SVGRepo_bgCarrier" stroke-width="0"></g><g id="SVGRepo_tracerCarrier" stroke-linecap="round" stroke-linejoin="round"></g><g id="SVGRepo_iconCarrier"> <path d="M4 12H20M12 4V20" stroke="#ffffff" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"></path> </g></svg>
+      </div>
+    </div>
+
   </body>
 </html>
