--- a/Day_16/index.html
+++ b/Day_16/index.html
@@ -6,7 +6,7 @@
     <title>Inserting and Remonving</title>
   </head>
   <body>
-    <div class="container red bg-green">
+    <!-- <div class="container red bg-green">
       <div
         class="box"
         style="display: flex"
@@ -17,16 +17,23 @@
       </div>
       <div class="box">Hey I am a box</div>
       <script>
-        // let div = document.createElement("div");
-        // div.innerHTML = "I have been inserted <b>by harry</b>"
-        // div.setAttribute("class", "created");
-        // document.querySelector(".container").before(div);
+        let div = document.createElement("div");
+        div.innerHTML = "I have been inserted <b>by harry</b>"
+        div.setAttribute("class", "created");
+        document.querySelector(".container").before(div);
         let cont = document.querySelector(".container");
         cont.insertAdjacentHTML(
           "beforebegin",
           "<b> I am under the water. Please h elp me here too much raining.... iuuuuooooo</b>"
         );
-      </script>
-    </div>
+      </script> -->
+      <div class="container">
+        <div class="box">box 1</div>
+        <div class="box">box 2</div>
+        <div class="box">box 3</div>
+        <div class="box" id="boxe">box 4</div>
+      </div>
+
+      <script src="script.js"></script>
   </body>
 </html>
