--- a/Day_12/index.html
+++ b/Day_12/index.html
@@ -57,8 +57,7 @@
     <section class="features-section">
       <!-- Card 1 -->
       <div class="feature-card">
-        <div class="icon">          
-        </div>
+        <div class="icon"></div>
         <h2>Enjoy on your TV</h2>
         <p>Watch on smart TVs, PlayStation, Xbox, Chromecast, and more.</p>
       </div>
@@ -94,29 +93,215 @@
       <h2>Frequently Asked Questions</h2>
       <div class="ques-container">
         <p>What is Netflix?</p>
-        <svg hegiht="28px" width="28px" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg"><g id="SVGRepo_bgCarrier" stroke-width="0"></g><g id="SVGRepo_tracerCarrier" stroke-linecap="round" stroke-linejoin="round"></g><g id="SVGRepo_iconCarrier"> <path d="M4 12H20M12 4V20" stroke="#ffffff" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"></path> </g></svg>
+        <svg
+          hegiht="28px"
+          width="28px"
+          viewBox="0 0 24 24"
+          fill="none"
+          xmlns="http://www.w3.org/2000/svg"
+        >
+          <g id="SVGRepo_bgCarrier" stroke-width="0"></g>
+          <g
+            id="SVGRepo_tracerCarrier"
+            stroke-linecap="round"
+            stroke-linejoin="round"
+          ></g>
+          <g id="SVGRepo_iconCarrier">
+            <path
+              d="M4 12H20M12 4V20"
+              stroke="#ffffff"
+              stroke-width="2"
+              stroke-linecap="round"
+              stroke-linejoin="round"
+            ></path>
+          </g>
+        </svg>
       </div>
       <div class="ques-container">
         <p>How much does Netflix cost?</p>
-        <svg hegiht="28px" width="28px" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg"><g id="SVGRepo_bgCarrier" stroke-width="0"></g><g id="SVGRepo_tracerCarrier" stroke-linecap="round" stroke-linejoin="round"></g><g id="SVGRepo_iconCarrier"> <path d="M4 12H20M12 4V20" stroke="#ffffff" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"></path> </g></svg>
+        <svg
+          hegiht="28px"
+          width="28px"
+          viewBox="0 0 24 24"
+          fill="none"
+          xmlns="http://www.w3.org/2000/svg"
+        >
+          <g id="SVGRepo_bgCarrier" stroke-width="0"></g>
+          <g
+            id="SVGRepo_tracerCarrier"
+            stroke-linecap="round"
+            stroke-linejoin="round"
+          ></g>
+          <g id="SVGRepo_iconCarrier">
+            <path
+              d="M4 12H20M12 4V20"
+              stroke="#ffffff"
+              stroke-width="2"
+              stroke-linecap="round"
+              stroke-linejoin="round"
+            ></path>
+          </g>
+        </svg>
       </div>
       <div class="ques-container">
         <p>Where can I watch?</p>
-        <svg hegiht="28px" width="28px" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg"><g id="SVGRepo_bgCarrier" stroke-width="0"></g><g id="SVGRepo_tracerCarrier" stroke-linecap="round" stroke-linejoin="round"></g><g id="SVGRepo_iconCarrier"> <path d="M4 12H20M12 4V20" stroke="#ffffff" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"></path> </g></svg>
+        <svg
+          hegiht="28px"
+          width="28px"
+          viewBox="0 0 24 24"
+          fill="none"
+          xmlns="http://www.w3.org/2000/svg"
+        >
+          <g id="SVGRepo_bgCarrier" stroke-width="0"></g>
+          <g
+            id="SVGRepo_tracerCarrier"
+            stroke-linecap="round"
+            stroke-linejoin="round"
+          ></g>
+          <g id="SVGRepo_iconCarrier">
+            <path
+              d="M4 12H20M12 4V20"
+              stroke="#ffffff"
+              stroke-width="2"
+              stroke-linecap="round"
+              stroke-linejoin="round"
+            ></path>
+          </g>
+        </svg>
       </div>
       <div class="ques-container">
         <p>How do I cancel?</p>
-        <svg hegiht="28px" width="28px" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg"><g id="SVGRepo_bgCarrier" stroke-width="0"></g><g id="SVGRepo_tracerCarrier" stroke-linecap="round" stroke-linejoin="round"></g><g id="SVGRepo_iconCarrier"> <path d="M4 12H20M12 4V20" stroke="#ffffff" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"></path> </g></svg>
+        <svg
+          hegiht="28px"
+          width="28px"
+          viewBox="0 0 24 24"
+          fill="none"
+          xmlns="http://www.w3.org/2000/svg"
+        >
+          <g id="SVGRepo_bgCarrier" stroke-width="0"></g>
+          <g
+            id="SVGRepo_tracerCarrier"
+            stroke-linecap="round"
+            stroke-linejoin="round"
+          ></g>
+          <g id="SVGRepo_iconCarrier">
+            <path
+              d="M4 12H20M12 4V20"
+              stroke="#ffffff"
+              stroke-width="2"
+              stroke-linecap="round"
+              stroke-linejoin="round"
+            ></path>
+          </g>
+        </svg>
       </div>
       <div class="ques-container">
         <p>What can I watch on Netflix?</p>
-        <svg hegiht="28px" width="28px" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg"><g id="SVGRepo_bgCarrier" stroke-width="0"></g><g id="SVGRepo_tracerCarrier" stroke-linecap="round" stroke-linejoin="round"></g><g id="SVGRepo_iconCarrier"> <path d="M4 12H20M12 4V20" stroke="#ffffff" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"></path> </g></svg>
+        <svg
+          hegiht="28px"
+          width="28px"
+          viewBox="0 0 24 24"
+          fill="none"
+          xmlns="http://www.w3.org/2000/svg"
+        >
+          <g id="SVGRepo_bgCarrier" stroke-width="0"></g>
+          <g
+            id="SVGRepo_tracerCarrier"
+            stroke-linecap="round"
+            stroke-linejoin="round"
+          ></g>
+          <g id="SVGRepo_iconCarrier">
+            <path
+              d="M4 12H20M12 4V20"
+              stroke="#ffffff"
+              stroke-width="2"
+              stroke-linecap="round"
+              stroke-linejoin="round"
+            ></path>
+          </g>
+        </svg>
       </div>
-      <div class="ques-container"> 
+      <div class="ques-container">
         <p>Is Netflix good for kids?</p>
-        <svg hegiht="28px" width="28px" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg"><g id="SVGRepo_bgCarrier" stroke-width="0"></g><g id="SVGRepo_tracerCarrier" stroke-linecap="round" stroke-linejoin="round"></g><g id="SVGRepo_iconCarrier"> <path d="M4 12H20M12 4V20" stroke="#ffffff" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"></path> </g></svg>
+        <svg
+          hegiht="28px"
+          width="28px"
+          viewBox="0 0 24 24"
+          fill="none"
+          xmlns="http://www.w3.org/2000/svg"
+        >
+          <g id="SVGRepo_bgCarrier" stroke-width="0"></g>
+          <g
+            id="SVGRepo_tracerCarrier"
+            stroke-linecap="round"
+            stroke-linejoin="round"
+          ></g>
+          <g id="SVGRepo_iconCarrier">
+            <path
+              d="M4 12H20M12 4V20"
+              stroke="#ffffff"
+              stroke-width="2"
+              stroke-linecap="round"
+              stroke-linejoin="round"
+            ></path>
+          </g>
+        </svg>
       </div>
     </div>
 
+    <div class="memebership">
+      <div class="top-text">
+        <p>
+          Ready to watch? Enter your email to create or restart your membership.
+        </p>
+      </div>
+      <div class="input-box">
+        <input type="email" placeholder="Email Address" />
+        <button>Get Started &gt;</button>
+      </div>
+    </div>
+
+    <div class="top-footer">
+      <a href="">Questions? Contact us.</a>
+    </div>
+
+    <div class="footer-items">
+      <div class="footer-item">
+        <a href="">FAQ?</a>
+        <a href="">Investor Relations</a>
+        <a href="">Privacy</a>
+        <a href="">Speed Test</a>
+      </div>
+      <div class="footer-item">
+        <a href="">Help Center</a>
+        <a href="">Jobs</a>
+        <a href="">Cookie Preferences</a>
+        <a href="">Legal Notices</a>
+      </div>
+      <div class="footer-item">
+        <a href="">Account</a>
+        <a href="">Ways to Watch</a>
+        <a href="">Corporate Information</a>
+        <a href="">Only on Netflix</a>
+      </div>
+      <div class="footer-item">
+        <a href="">Help Center</a>
+        <a href="">Media Center</a>
+        <a href="">Investor Relations</a>
+      </div>
+    </div>
+    <div class="footer-bottom">
+      <button class="lang-btn">
+        <span class="icon">🌐</span>
+        <span class="text">English</span>
+        <span class="arrow">▾</span>
+      </button>
+
+      <p>Netflix Nepal</p>
+      <p>
+        This page is protected by Google reCAPTCHA to ensure you're not a bot.
+        <a href="">Learn more</a>
+      </p>
+    </div>
   </body>
 </html>
