--- a/Day_27/public/mypage.html
+++ b/Day_27/public/mypage.html
@@ -9,10 +9,11 @@
 
     <script>
         async function testPost() {
-            let a = await ('/mypage.html',{method:"POST"})
+            let a = await fetch('/',{method:"PUT"})
             let b = await a.text()
             console.log(b)   
         }
+        testPost()
     </script>
     
 </body>
