--- a/Day_34 Twitter Clone/Twitter Clone/index.html
+++ b/Day_34 Twitter Clone/Twitter Clone/index.html
@@ -28,7 +28,7 @@
             </g>
           </svg>
         </div>
-        <div class="sidebar flex justify-end">
+        <div class="sidebar flex justify-end flex-col sticky top-0">
           <ul class="flex flex-col text-2xl space-y-3 px-11 font-bold">
             <li
               class="flex justify-start items-center gap-3 w-fit px-5 py-2 hover:cursor-pointer hover:bg-gray-900 hover:rounded-full"
@@ -100,6 +100,26 @@
               </button>
             </div>
           </ul>
+
+          <div class="userprofile w-full mt-10 justify-end hidden md:flex">
+            <div
+              class="item p-3 items-center gap-5 justify-end mx-5 flex hover:bg-gray-800 cursor-pointer rounded-full w-fit"
+            >
+              <div class="p1">
+                <img
+                  class="w-12 h-12 rounded-full"
+                  src="https://scontent.fktm20-1.fna.fbcdn.net/v/t39.30808-1/611141116_1257276016457841_8026998659813276959_n.jpg?stp=dst-jpg_s200x200_tt6&_nc_cat=105&ccb=1-7&_nc_sid=e99d92&_nc_ohc=qAfw4yxoD5cQ7kNvwHfUK6I&_nc_oc=AdlSSQPocYO0z_Lz2CnGDfxs8qL0LGj4-cGhPv1BfP7Ay9jyICYKNeFNFb3wEHwjFiI&_nc_zt=24&_nc_ht=scontent.fktm20-1.fna&_nc_gid=5mp935WkBikTHm9COscyYw&oh=00_AfpnHVhsY516W5_0Z5dq1Kqt1YPV0X3jP6ALLEhAEb0IVA&oe=6965B2E2"
+                  alt="vercel"
+                />
+              </div>
+              <div class="p2">
+                <div>Jivan Sharma</div>
+                <div class="text-gray-500">@jivan4shamra3</div>
+              </div>
+
+              <div class="p3 text-2xl">...</div>
+            </div>
+          </div>
         </div>
       </div>
 
@@ -267,8 +287,59 @@
             </div>
           </div>
 
-          <hr>  
-          
+          <hr />
+
+          <!--post 3 -->
+
+          <div class="post border-[1px] border-y-gray-600 border-x-0">
+            <div class="flex">
+              <div class="image m-4">
+                <img
+                  class="w-16"
+                  src="https://pbs.twimg.com/profile_images/1697299503198646273/GTnwCVUC_x96.jpg"
+                  alt=""
+                />
+              </div>
+              <div class="content my-3">
+                <span
+                  class="font-bold hover:underline cursor-pointer text-white"
+                  >Elon Musk</span
+                >
+                <span class="text-gray-500">@ElonMusk · 6h </span>
+                <div class="postimg m-2 ml-0">
+                  I spent $44 billion for this app and now Lizard boy just
+                  decided to hit copy and paste. It’s personal now. See you in
+                  the cage, Zuck.
+                </div>
+                <div
+                  class="icons flex justify-between mx-4 my-4 text-sm text-gray-600"
+                >
+                  <div
+                    class="icon flex items-center justify-center hover:text-blue-500 hover:bg-gray-900 hover:rounded-full p-1 hover:cursor-pointer"
+                  >
+                    <span class="material-symbols-outlined"> chat_bubble </span>
+                    1k
+                  </div>
+                  <div
+                    class="icon flex items-center justify-center hover:text-green-500 hover:bg-gray-900 hover:rounded-full p-1 hover:cursor-pointer"
+                  >
+                    <span class="material-symbols-outlined"> repeat </span> 1k
+                  </div>
+                  <div
+                    class="icon flex items-center justify-center hover:text-pink-500 hover:bg-gray-900 hover:rounded-full p-1 hover:cursor-pointer"
+                  >
+                    <span class="material-symbols-outlined"> Favorite </span> 1k
+                  </div>
+                  <div
+                    class="icon flex items-center justify-center hover:text-blue-500 hover:bg-gray-900 hover:rounded-full p-1 hover:cursor-pointer"
+                  >
+                    <span class="material-symbols-outlined"> bar_chart </span>
+                    1k
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div>
         </div>
       </div>
 
